<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F6F6"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_before"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="24dp"
            android:text="Select type of meter"
            android:textStyle="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/background_edittext"
            android:clipToPadding="true"
            android:orientation="horizontal"
            android:padding="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/pyidaungsu_numbers"
                android:text="@string/home_meter"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/other"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/other_meter"
                android:fontFamily="@font/pyidaungsu_numbers"
                android:textStyle="bold" />
        </RadioGroup>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edit_unit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:fontFamily="@font/pyidaungsu_numbers"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/background_edittext"
            android:hint="@string/type_units"
            android:includeFontPadding="true"
            android:inputType="number"
            android:maxLines="1"
            android:padding="10dp"
            android:paddingStart="15dp"
            android:paddingLeft="15dp"
            android:textColor="#040303"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:background="@drawable/background_button"
            android:text="Calculate"
            android:textColor="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_unit" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:visibility="gone"
        android:id="@+id/layout_after"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/top_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="32dp"
            android:weightSum="3"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#040303"
                android:textStyle="bold"
                android:text="@string/units"
                android:layout_marginLeft="10dp" />

            <TextView
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#040303"
                android:textStyle="bold"
                android:text="@string/price" />

            <TextView
                android:gravity="center|end"
                android:layout_width="0dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#040303"
                android:textStyle="bold"
                android:text="@string/cost"
                android:layout_marginRight="10dp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rc_bill"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            tools:listitem="@layout/item_bill"
            app:layout_constraintTop_toBottomOf="@+id/top_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/bottom_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="32dp"
            android:weightSum="2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rc_bill"
            android:layout_marginRight="20dp">
            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="#040303"
                android:fontFamily="@font/pyidaungsu_numbers"
                android:includeFontPadding="false"
                android:textStyle="bold"
                android:text="@string/total_costs" />
            <TextView
                android:gravity="end"
                android:id="@+id/txt_totalprice"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#040303"
                android:includeFontPadding="false"
                android:fontFamily="@font/pyidaungsu_numbers"
                android:textStyle="bold"
                tools:text="Totle price" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>